--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,14 +1,18 @@
-name: Hello World
+name: CI
+
 on:
-  push
+  push:  
 
 jobs:
-  hello-job:
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Echo text
-        run: |
-          echo "Hello, world!"
-  
-          
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
