--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -12,6 +12,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.11
+   
+    - name: clone repository
+      uses: actions/checkout@v2
 
     - name: Install dependencies
       run: |
